# ChangeLog for sys-devel/gettext
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gettext/ChangeLog,v 1.162 2008/01/07 05:17:29 vapier Exp $

  07 Jan 2008; Mike Frysinger <vapier@gentoo.org> gettext-0.17.ebuild:
  Pull in ncurses/libcroco/libxml2 which we actually use, force glib to
  bundled version, and add support for USE="acl openmp".

  17 Dec 2007; Jeroen Roovers <jer@gentoo.org> gettext-0.17.ebuild:
  Stable for HPPA (bug #202168).

  16 Dec 2007; Markus Rothe <corsair@gentoo.org> gettext-0.17.ebuild:
  Stable on ppc64; bug #202168

  16 Dec 2007; Raúl Porcel <armin76@gentoo.org> gettext-0.17.ebuild:
  alpha/ia64/sparc stable wrt #202168

  15 Dec 2007; Samuli Suominen <drac@gentoo.org> gettext-0.17.ebuild:
  amd64 stable wrt #202168

  14 Dec 2007; Dawid Węgliński <cla@gentoo.org> gettext-0.17.ebuild:
  Stable on x86 (bug #202168)

  14 Dec 2007; nixnut <nixnut@gentoo.org> gettext-0.17.ebuild:
  Stable on ppc wrt bug 202168

*gettext-0.17 (10 Nov 2007)

  10 Nov 2007; Mike Frysinger <vapier@gentoo.org> +gettext-0.17.ebuild:
  Version bump.

  06 Oct 2007; Ulrich Mueller <ulm@gentoo.org> -files/50po-mode-gentoo.el,
  -gettext-0.16.1.ebuild:
  Remove old.

  06 Oct 2007; Tom Gall <tgall@gentoo.org> gettext-0.16.1-r1.ebuild:
  stable on ppc64 bug #189031

  31 Aug 2007; Christoph Mende <angelos@gentoo.org>
  gettext-0.16.1-r1.ebuild:
  Stable on amd64 wrt bug #189031

  24 Aug 2007; Raúl Porcel <armin76@gentoo.org> gettext-0.16.1-r1.ebuild:
  alpha/ia64 stable wrt #189031

  23 Aug 2007; Joshua Kinard <kumba@gentoo.org> gettext-0.16.1-r1.ebuild:
  Stable on mips, per #189031.

  19 Aug 2007; Jeroen Roovers <jer@gentoo.org> gettext-0.16.1-r1.ebuild:
  Stable for HPPA (bug #189031).

  18 Aug 2007; nixnut <nixnut@gentoo.org> gettext-0.16.1-r1.ebuild:
  Stable on ppc wrt bug 189031

  16 Aug 2007; Christian Faulhammer <opfer@gentoo.org>
  gettext-0.16.1-r1.ebuild:
  stable x86, bug 189031
