@@ -5,6 +5,6 @@ AUX gettext-0.16.1-x64-solaris.patch 5187 RMD160 9c07d135aba36cb29fc79e0ea647d5b
 DIST gettext-0.16.1.tar.gz 8539634 RMD160 0fa96b2d005e2490e8603a0a3612041086d5aea1 SHA1 8642f4346dfd6a18ecd883329e150bfe9e0886c3 SHA256 0bf850d1a079fb5a61f0a47b1a9efd35eb44032255375e1cedb0253bc27b376d
 DIST gettext-0.17.tar.gz 11640890 RMD160 36df9d4ad2848ec26729781e0d7e25b419e7d261 SHA1 c51803d9f745f6ace36bd09c0486d5735ce399cf SHA256 209638bb8e162f22c281145a34e220c66f1f6e9ff5e4c50c6f2ef2ded59537ba
 EBUILD gettext-0.16.1-r1.ebuild 3367 RMD160 fb298712ced89d29b20c6b98f3cd3c4567a6ee9f SHA1 50d5feb9491577504fea37b09041a3a39422e7a4 SHA256 57496029905ab961f554a3d7133f298cc9603b55555ad5f7092c91b6a5e68296
-EBUILD gettext-0.17.ebuild 3137 RMD160 8e9ea96fd58f4bef248fb1aa51146fb7de4bda6f SHA1 cfe288eb0d8c045108f4acb3355366c56884487b SHA256 c27cfa567fa11d2f56dd8ccf848ff664bde0abd40ba2948c86d36edb1954e598
-MISC ChangeLog 20411 RMD160 8c1c3c57ddca2ea7232d62e746a0bcf1431c0c83 SHA1 2b89ceae51bc33fb7d5ba2fe0b42ded7aa2addea SHA256 04edcae7e4e1c64156919281b69fb084f75c27a12ae5d019b3f1d197cbdaaa8b
+EBUILD gettext-0.17.ebuild 3614 RMD160 c5fd7f538a3f0e0d5e75ce9b06ce433191ef4d3e SHA1 9a926d8e7087e785f99a9a6cce0358b48b3ccd85 SHA256 d962c4736cc1f5d43305d53cfd763124d4222e711bffea1dc02c40c33a04065d
+MISC ChangeLog 20731 RMD160 3097d7796e2993023242ce58254404b40e2bc743 SHA1 57dbaad475350ae5816ca222d0315a18a88c191e SHA256 5f6007facdb90bf7afc154a2685e9da93728037c88d5218bd212b283fc7a99b6
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
